# SlideGenerator

./: .editorconfig  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .gitmodules  .prettierignore  .prettierrc  .todo  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Configs.sample.yaml  Directory.Build.props  INSTRUCTIONS.MD  Program.cs  README.md  SlideGenerator.slnx  Taskfile.yml  Workflow.md  app.config.toml  appsettings.json  backend.config.sample.yaml  backend.config.yaml  backend.csproj  build.ps1  build.sh  config.ini  construction.md  convert.py  create_gui_script.py  data.slnx  globals.py  index.html  index.py  instructions.md  logger.py  package-lock.json  package.json  presentation.csproj  (+7 more)
.claude/: settings.local.json
.github/: CODEOWNERS  FUNDING.yml  copilot-instructions.md
.run/: data.run.xml  renderer.run.xml
.ui_origin/: information.ui  menu.ui  resource.qrc
Config/: AppConfig.cs  BackendConfig.cs
DTOs/: IFilePathBased.cs  IJobBased.cs  Requests.cs
Docs/: API.md
Exceptions/: CustomExceptions.cs
FrontEnd/: LogPrintWindow.py  MainWindow.py  ProgressBar.py  README-FrontEnd.md  UILoader.py  UiAPI.py  backend.py  test.py
Hubs/: DownloadHub.cs  ImageHub.cs  SheetHub.cs
Logic/: Download.cs  Image.cs  Sheet.cs
Models/: Download.cs  Image.cs  Sheet.cs
Properties/: launchSettings.json
Services/: DownloadService.cs  ImageService.cs  Service.cs  SheetService.cs
SlideGenerator.Application/: .todo  (+1 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
(+3513 files in other folders)
