[package]
name = "slide-generator"
version = "1.1.0"
description = "Generate presentation slides from predefined template"
authors = ["thnhmai06"]
license = "GPL-3.0-only"
repository = "https://github.com/thnhmai06/SlideGenerator.git"
edition = "2024"
rust-version = "1.85"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
